Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/zzzz_in_arbeit/h/gstvalue.h

typedef struct _GstValueTable GstValueTable;
extern
void            gst_value_register              (const GstValueTable   *table);
extern
void            gst_value_init_and_copy         (GValue                *dest,
                                                 const GValue          *src);
extern
gchar *         gst_value_serialize             (const GValue          *value) ;
extern
gboolean        gst_value_deserialize           (GValue                *dest,
                                                 const gchar           *src);
extern
gboolean        gst_value_deserialize_with_pspec (GValue               *dest,
                                                 const gchar           *src,
                                                 GParamSpec            *pspec);
extern
gboolean        gst_value_hash                  (const GValue * value,
                                                 guint * res);
/* list */

extern
void            gst_value_list_append_value     (GValue         *value,
                                                 const GValue   *append_value);
extern
void            gst_value_list_append_and_take_value (GValue         *value,
                                                 GValue   *append_value);
extern
void            gst_value_list_prepend_value    (GValue         *value,
                                                 const GValue   *prepend_value);
extern
void            gst_value_list_concat           (GValue         *dest,
                                                 const GValue   *value1,
                                                 const GValue   *value2);
extern
void            gst_value_list_merge            (GValue         *dest,
                                                 const GValue   *value1,
                                                 const GValue   *value2);
extern
guint           gst_value_list_get_size         (const GValue   *value);
extern
const GValue *  gst_value_list_get_value        (const GValue   *value,
                                                 guint          index);
extern
GValue *        gst_value_list_init             (GValue *value,
						 guint prealloc);
/* array */

extern
void            gst_value_array_append_value    (GValue         *value,
                                                 const GValue   *append_value);
extern
void            gst_value_array_append_and_take_value    (GValue         *value,
                                                 GValue   *append_value);
extern
void            gst_value_array_prepend_value   (GValue         *value,
                                                 const GValue   *prepend_value);
extern
guint           gst_value_array_get_size        (const GValue   *value);
extern
const GValue *  gst_value_array_get_value       (const GValue   *value,
                                                 guint          index);
extern
GValue *        gst_value_array_init            (GValue *value,
						 guint prealloc);
/* unique list */
extern
void            gst_value_unique_list_append_value     (GValue         *value,
                                                 const GValue   *append_value);
extern
void            gst_value_unique_list_append_and_take_value (GValue    *value,
                                                 GValue   *append_value);
extern
void            gst_value_unique_list_prepend_value    (GValue         *value,
                                                 const GValue   *prepend_value);
extern
void            gst_value_unique_list_concat           (GValue         *dest,
                                                 const GValue   *value1,
                                                 const GValue   *value2);
extern
guint           gst_value_unique_list_get_size         (const GValue   *value);
extern
const GValue *  gst_value_unique_list_get_value        (const GValue   *value,
                                                 guint          index);
/* int range */

extern
void            gst_value_set_int_range         (GValue         *value,
                                                 gint           start,
                                                 gint           end);
extern
void            gst_value_set_int_range_step    (GValue         *value,
                                                 gint           start,
                                                 gint           end,
                                                 gint           step);
extern
gint            gst_value_get_int_range_min     (const GValue   *value);
extern
gint            gst_value_get_int_range_max     (const GValue   *value);
extern
gint            gst_value_get_int_range_step    (const GValue   *value);
/* int64 range */

extern
void            gst_value_set_int64_range       (GValue         *value,
                                                 gint64         start,
                                                 gint64         end);
extern
void            gst_value_set_int64_range_step  (GValue         *value,
                                                 gint64         start,
                                                 gint64         end,
                                                 gint64         step);
extern
gint64          gst_value_get_int64_range_min   (const GValue   *value);
extern
gint64          gst_value_get_int64_range_max   (const GValue   *value);
extern
gint64          gst_value_get_int64_range_step  (const GValue   *value);
/* double range */

extern
void            gst_value_set_double_range      (GValue         *value,
                                                 gdouble        start,
                                                 gdouble        end);
extern
gdouble         gst_value_get_double_range_min  (const GValue   *value);
extern
gdouble         gst_value_get_double_range_max  (const GValue   *value);
/* caps */

extern
const GstCaps * gst_value_get_caps              (const GValue   *value);
extern
void            gst_value_set_caps              (GValue         *value,
                                                 const GstCaps  *caps);
/* structure */

extern
const GstStructure *
                gst_value_get_structure         (const GValue   *value);
extern
void            gst_value_set_structure         (GValue         *value,
                                                 const GstStructure  *structure);
/* caps features */

extern
const GstCapsFeatures *
                gst_value_get_caps_features     (const GValue   *value);
extern
void            gst_value_set_caps_features     (GValue         *value,
                                                 const GstCapsFeatures  *features);
/* fraction */

extern
void            gst_value_set_fraction          (GValue         *value,
                                                 gint           numerator,
                                                 gint           denominator);
extern
gint            gst_value_get_fraction_numerator   (const GValue  *value);
extern
gint            gst_value_get_fraction_denominator (const GValue *value);
extern
gboolean        gst_value_fraction_multiply        (GValue         *product,
                                                    const GValue   *factor1,
                                                    const GValue   *factor2);
extern
gboolean        gst_value_fraction_subtract     (GValue * dest,
                                                 const GValue * minuend,
                                                 const GValue * subtrahend);
/* fraction range */

extern
void            gst_value_set_fraction_range    (GValue         *value,
                                                 const GValue   *start,
                                                 const GValue   *end);
extern
void            gst_value_set_fraction_range_full (GValue       *value,
                                                 gint numerator_start,
                                                 gint denominator_start,
                                                 gint numerator_end,
                                                 gint denominator_end);
extern
const GValue    *gst_value_get_fraction_range_min (const GValue *value);
extern
const GValue    *gst_value_get_fraction_range_max (const GValue *value);
/* bitmask */

extern
guint64         gst_value_get_bitmask           (const GValue   *value);
extern
void            gst_value_set_bitmask           (GValue         *value,
                                                 guint64         bitmask);
/* flagset */

extern
void            gst_value_set_flagset (GValue * value, guint flags, guint mask);
extern
guint           gst_value_get_flagset_flags (const GValue * value);
extern
guint           gst_value_get_flagset_mask (const GValue * value);
/* compare */

extern
gint            gst_value_compare               (const GValue   *value1,
                                                 const GValue   *value2);
extern
gboolean        gst_value_can_compare           (const GValue   *value1,
                                                 const GValue   *value2);
extern
gboolean        gst_value_is_subset             (const GValue   *value1,
                                                 const GValue   *value2);
/* union */

extern
gboolean        gst_value_union                 (GValue         *dest,
                                                 const GValue   *value1,
                                                 const GValue   *value2);
extern
gboolean        gst_value_can_union             (const GValue   *value1,
                                                 const GValue   *value2);
/* intersection */

extern
gboolean        gst_value_intersect             (GValue         *dest,
                                                 const GValue   *value1,
                                                 const GValue   *value2);
extern
gboolean        gst_value_can_intersect         (const GValue   *value1,
                                                 const GValue   *value2);
/* subtraction */

extern
gboolean        gst_value_subtract              (GValue         *dest,
                                                 const GValue   *minuend,
                                                 const GValue   *subtrahend);
extern
gboolean        gst_value_can_subtract          (const GValue   *minuend,
                                                 const GValue   *subtrahend);
/* fixation */

extern
gboolean        gst_value_is_fixed              (const GValue   *value);
extern
gboolean        gst_value_fixate                (GValue         *dest,
                                                 const GValue   *src);
/* Flagset registration wrapper */

extern
GType		gst_flagset_register (GType flags_type);